@@ -13,6 +13,7 @@ import uk.gov.di.authentication.shared.entity.mfa.MFAMethod;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethodType;
 import uk.gov.di.authentication.shared.entity.mfa.MfaDetail;
 import uk.gov.di.authentication.shared.entity.mfa.SmsMfaDetail;
+import uk.gov.di.authentication.shared.helpers.ClientSubjectHelper;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 import uk.gov.di.authentication.sharedtest.basetest.ApiGatewayHandlerIntegrationTest;
 
@@ -36,7 +37,9 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
     private static final String TEST_PHONE_NUMBER = "07700900000";
     private static final String TEST_PHONE_NUMBER_TWO = "07700900111";
     private static final String TEST_CREDENTIAL = "ZZ11BB22CC33DD44EE55FF66GG77HH88II99JJ00";
+    private static final String INTERNAL_SECTOR_HOST = "test.account.gov.uk";
     private static String TEST_PUBLIC_SUBJECT;
+    private static String testInternalSubject;
     private static final MFAMethod defaultPrioritySms =
             MFAMethod.smsMfaMethod(
                     true,
@@ -73,6 +76,12 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
         userStore.signUp(TEST_EMAIL, TEST_PASSWORD);
         TEST_PUBLIC_SUBJECT =
                 userStore.getUserProfileFromEmail(TEST_EMAIL).get().getPublicSubjectID();
+        byte[] salt = userStore.addSalt(TEST_EMAIL);
+        testInternalSubject =
+                ClientSubjectHelper.calculatePairwiseIdentifier(
+                        userStore.getUserProfileFromEmail(TEST_EMAIL).get().getSubjectID(),
+                        INTERNAL_SECTOR_HOST,
+                        salt);
     }
 
     @Test
@@ -88,7 +97,9 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                         new SmsMfaDetail(TEST_PHONE_NUMBER))),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
-                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT));
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
+                        Map.of("principalId", testInternalSubject));
+
         assertEquals(200, response.getStatusCode());
 
         List<MFAMethod> mfaMethods = userStore.getMfaMethod(TEST_EMAIL);
@@ -133,7 +144,8 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                         new AuthAppMfaDetail(TEST_CREDENTIAL))),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
-                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT));
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
+                        Map.of("principalId", testInternalSubject));
         assertEquals(200, response.getStatusCode());
 
         List<MFAMethod> mfaMethods = userStore.getMfaMethod(TEST_EMAIL);
@@ -191,7 +203,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", "incorrect-public-subject-id"),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
         assertEquals(404, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
     }
@@ -222,7 +234,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1001));
     }
@@ -242,7 +254,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1068));
@@ -262,7 +274,7 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1069));
@@ -283,10 +295,29 @@ class MFAMethodsCreateHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1070));
+    }
+
+    @Test
+    void shouldReturn401WhenPrincipalIsInvalid() {
+        var response =
+                makeRequest(
+                        Optional.of(
+                                constructRequestBody(
+                                        PriorityIdentifier.BACKUP,
+                                        new AuthAppMfaDetail(
+                                                MFAMethodType.AUTH_APP,
+                                                "AA99BB88CC77DD66EE55FF44GG33HH22II11JJ00"))),
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        Map.of("publicSubjectId", TEST_PUBLIC_SUBJECT),
+                        Map.of("principalId", "invalid"));
+
+        assertEquals(401, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1079));
     }
 
     private static String constructRequestBody(
