@@ -2,15 +2,14 @@ package uk.gov.di.accountmanagement.api;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.RegisterExtension;
 import uk.gov.di.accountmanagement.lambda.MFAMethodsDeleteHandler;
 import uk.gov.di.authentication.shared.entity.ErrorResponse;
 import uk.gov.di.authentication.shared.entity.PriorityIdentifier;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethod;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethodType;
+import uk.gov.di.authentication.shared.helpers.ClientSubjectHelper;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 import uk.gov.di.authentication.sharedtest.basetest.ApiGatewayHandlerIntegrationTest;
-import uk.gov.di.authentication.sharedtest.extensions.UserStoreExtension;
 
 import java.util.Collections;
 import java.util.Map;
@@ -24,6 +23,8 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
 
     private static final String EMAIL = "joe.bloggs+3@digital.cabinet-office.gov.uk";
     private static final String PASSWORD = "password-1";
+    private static final String INTERNAL_SECTOR_HOST = "test.account.gov.uk";
+    private static String testInternalSubject;
     private static final MFAMethod DEFAULT_PRIORITY_AUTH_APP =
             MFAMethod.authAppMfaMethod(
                     "some-credential",
@@ -40,9 +41,6 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                     "20fbea7e-4c4e-4a32-a7b5-000bb4863660");
     private String publicSubjectId;
 
-    @RegisterExtension
-    private static UserStoreExtension userStoreExtension = new UserStoreExtension();
-
     @BeforeEach
     void setUp() {
         ConfigurationService mfaMethodEnabledConfigurationService =
@@ -53,14 +51,20 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                     }
                 };
         handler = new MFAMethodsDeleteHandler(mfaMethodEnabledConfigurationService);
-        publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
+        publicSubjectId = userStore.signUp(EMAIL, PASSWORD);
+        byte[] salt = userStore.addSalt(EMAIL);
+        testInternalSubject =
+                ClientSubjectHelper.calculatePairwiseIdentifier(
+                        userStore.getUserProfileFromEmail(EMAIL).get().getSubjectID(),
+                        INTERNAL_SECTOR_HOST,
+                        salt);
     }
 
     @Test
     void shouldReturn204AndDeleteAnMfaMethodWhenUserExists() {
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, DEFAULT_PRIORITY_AUTH_APP);
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, BACKUP_PRIORITY_SMS);
-        userStoreExtension.setMfaMethodsMigrated(EMAIL, true);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, DEFAULT_PRIORITY_AUTH_APP);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, BACKUP_PRIORITY_SMS);
+        userStore.setMfaMethodsMigrated(EMAIL, true);
 
         var response =
                 makeRequest(
@@ -72,11 +76,11 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                 publicSubjectId,
                                 "mfaIdentifier",
                                 BACKUP_PRIORITY_SMS.getMfaIdentifier()),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(204, response.getStatusCode());
 
-        var mfaMethods = userStoreExtension.getMfaMethod(EMAIL);
+        var mfaMethods = userStore.getMfaMethod(EMAIL);
         assertEquals(1, mfaMethods.size());
 
         var mfaMethod = mfaMethods.stream().findFirst().get();
@@ -98,7 +102,7 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                 nonExistentPublicSubjectId,
                                 "mfaIdentifier",
                                 "mfaIdentifier"),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(404, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
@@ -106,9 +110,9 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
 
     @Test
     void shouldReturn404WhenMfaMethodDoesNotExist() {
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, DEFAULT_PRIORITY_AUTH_APP);
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, BACKUP_PRIORITY_SMS);
-        userStoreExtension.setMfaMethodsMigrated(EMAIL, true);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, DEFAULT_PRIORITY_AUTH_APP);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, BACKUP_PRIORITY_SMS);
+        userStore.setMfaMethodsMigrated(EMAIL, true);
         var response =
                 makeRequest(
                         Optional.empty(),
@@ -119,19 +123,19 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                 publicSubjectId,
                                 "mfaIdentifier",
                                 "some-other-identifier"),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(404, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1065));
 
-        assertEquals(2, userStoreExtension.getMfaMethod(EMAIL).size());
+        assertEquals(2, userStore.getMfaMethod(EMAIL).size());
     }
 
     @Test
     void shouldReturn400WhenMfaMethodIsDefault() {
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, DEFAULT_PRIORITY_AUTH_APP);
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, BACKUP_PRIORITY_SMS);
-        userStoreExtension.setMfaMethodsMigrated(EMAIL, true);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, DEFAULT_PRIORITY_AUTH_APP);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, BACKUP_PRIORITY_SMS);
+        userStore.setMfaMethodsMigrated(EMAIL, true);
         var response =
                 makeRequest(
                         Optional.empty(),
@@ -142,19 +146,19 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                 publicSubjectId,
                                 "mfaIdentifier",
                                 DEFAULT_PRIORITY_AUTH_APP.getMfaIdentifier()),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(409, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1066));
 
-        assertEquals(2, userStoreExtension.getMfaMethod(EMAIL).size());
+        assertEquals(2, userStore.getMfaMethod(EMAIL).size());
     }
 
     @Test
     void shouldReturn400WhenUsersMfaMethodsAreNotMigrated() {
-        userStoreExtension.setMfaMethodsMigrated(EMAIL, false);
+        userStore.setMfaMethodsMigrated(EMAIL, false);
 
-        userStoreExtension.addMfaMethod(EMAIL, MFAMethodType.AUTH_APP, true, true, "credential");
+        userStore.addMfaMethod(EMAIL, MFAMethodType.AUTH_APP, true, true, "credential");
         var response =
                 makeRequest(
                         Optional.empty(),
@@ -165,11 +169,47 @@ class MFAMethodsDeleteHandlerIntegrationTest extends ApiGatewayHandlerIntegratio
                                 publicSubjectId,
                                 "mfaIdentifier",
                                 DEFAULT_PRIORITY_AUTH_APP.getMfaIdentifier()),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(400, response.getStatusCode());
         assertThat(response, hasJsonBody(ErrorResponse.ERROR_1067));
 
-        assertEquals(1, userStoreExtension.getMfaMethod(EMAIL).size());
+        assertEquals(1, userStore.getMfaMethod(EMAIL).size());
+    }
+
+    @Test
+    void shouldReturn401WhenPrincipalIsInvalid() {
+        var response =
+                makeRequest(
+                        Optional.empty(),
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        Map.of(
+                                "publicSubjectId",
+                                publicSubjectId,
+                                "mfaIdentifier",
+                                DEFAULT_PRIORITY_AUTH_APP.getMfaIdentifier()),
+                        Map.of("principalId", "invalid-principal"));
+
+        assertEquals(401, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1079));
+    }
+
+    @Test
+    void shouldReturn404WhenUserProfileIsNotFoundForPublicSubject() {
+        var response =
+                makeRequest(
+                        Optional.empty(),
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        Map.of(
+                                "publicSubjectId",
+                                "invalid-public-subject-id",
+                                "mfaIdentifier",
+                                DEFAULT_PRIORITY_AUTH_APP.getMfaIdentifier()),
+                        Map.of("principalId", testInternalSubject));
+
+        assertEquals(404, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
     }
 }
