@@ -3,15 +3,14 @@ package uk.gov.di.accountmanagement.api;
 import com.google.gson.JsonParser;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.RegisterExtension;
 import uk.gov.di.accountmanagement.lambda.MFAMethodsRetrieveHandler;
 import uk.gov.di.authentication.shared.entity.ErrorResponse;
 import uk.gov.di.authentication.shared.entity.PriorityIdentifier;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethod;
 import uk.gov.di.authentication.shared.entity.mfa.MFAMethodType;
+import uk.gov.di.authentication.shared.helpers.ClientSubjectHelper;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 import uk.gov.di.authentication.sharedtest.basetest.ApiGatewayHandlerIntegrationTest;
-import uk.gov.di.authentication.sharedtest.extensions.UserStoreExtension;
 
 import java.util.Collections;
 import java.util.Map;
@@ -22,17 +21,18 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static uk.gov.di.authentication.sharedtest.matchers.APIGatewayProxyResponseEventMatcher.hasJsonBody;
 
-class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrationTest {
+class MFAMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrationTest {
 
     private static final String EMAIL = "joe.bloggs+3@digital.cabinet-office.gov.uk";
     private static final String PASSWORD = "password-1";
     private static final String PHONE_NUMBER = "+447700900000";
-
-    @RegisterExtension
-    private static UserStoreExtension userStoreExtension = new UserStoreExtension();
+    private static final String INTERNAL_SECTOR_HOST = "test.account.gov.uk";
+    private static String testInternalSubject;
+    private static String publicSubjectId;
 
     @BeforeEach
     void setUp() {
+        publicSubjectId = userStore.signUp(EMAIL, PASSWORD);
         ConfigurationService mfaMethodEnabledConfigurationService =
                 new ConfigurationService() {
                     @Override
@@ -41,12 +41,17 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                     }
                 };
         handler = new MFAMethodsRetrieveHandler(mfaMethodEnabledConfigurationService);
+        byte[] salt = userStore.addSalt(EMAIL);
+        testInternalSubject =
+                ClientSubjectHelper.calculatePairwiseIdentifier(
+                        userStore.getUserProfileFromEmail(EMAIL).get().getSubjectID(),
+                        INTERNAL_SECTOR_HOST,
+                        salt);
     }
 
     @Test
     void shouldReturn200WithSmsMethodWhenUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
-        userStoreExtension.addVerifiedPhoneNumber(EMAIL, PHONE_NUMBER);
+        userStore.addVerifiedPhoneNumber(EMAIL, PHONE_NUMBER);
 
         var response =
                 makeRequest(
@@ -54,10 +59,9 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
-        var mfaIdentifier =
-                userStoreExtension.getUserProfileFromEmail(EMAIL).get().getMfaIdentifier();
+        var mfaIdentifier = userStore.getUserProfileFromEmail(EMAIL).get().getMfaIdentifier();
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -80,10 +84,9 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn200WithSmsAndExistingMfaIdWhenUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
-        userStoreExtension.addVerifiedPhoneNumber(EMAIL, PHONE_NUMBER);
+        userStore.addVerifiedPhoneNumber(EMAIL, PHONE_NUMBER);
         var mfaIdentifier = "some-identifier";
-        userStoreExtension.setPhoneNumberMfaIdentifer(EMAIL, mfaIdentifier);
+        userStore.setPhoneNumberMfaIdentifer(EMAIL, mfaIdentifier);
 
         var response =
                 makeRequest(
@@ -91,7 +94,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -114,9 +117,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn200WithAuthAppMethodWithGeneratedMfaIdWhenUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
-        userStoreExtension.addMfaMethod(
-                EMAIL, MFAMethodType.AUTH_APP, true, true, "some-credential");
+        userStore.addMfaMethod(EMAIL, MFAMethodType.AUTH_APP, true, true, "some-credential");
 
         var response =
                 makeRequest(
@@ -124,9 +125,9 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
-        var identifier = userStoreExtension.getMfaMethod(EMAIL).get(0).getMfaIdentifier();
+        var identifier = userStore.getMfaMethod(EMAIL).get(0).getMfaIdentifier();
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -149,10 +150,8 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn200WithAuthAppMethodAndExistingMfaIdWhenUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
         var identifier = "some-identifier";
-        userStoreExtension.addAuthAppMethodWithIdentifier(
-                EMAIL, true, true, "some-credential", identifier);
+        userStore.addAuthAppMethodWithIdentifier(EMAIL, true, true, "some-credential", identifier);
 
         var response =
                 makeRequest(
@@ -160,9 +159,9 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
-        var storedIdentifier = userStoreExtension.getMfaMethod(EMAIL).get(0).getMfaIdentifier();
+        var storedIdentifier = userStore.getMfaMethod(EMAIL).get(0).getMfaIdentifier();
         assertEquals(identifier, storedIdentifier);
 
         assertEquals(200, response.getStatusCode());
@@ -186,8 +185,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn200WithMultipleMethodsWhenMigratedUserExists() {
-        var publicSubjectId = userStoreExtension.signUp(EMAIL, PASSWORD);
-        userStoreExtension.setMfaMethodsMigrated(EMAIL, true);
+        userStore.setMfaMethodsMigrated(EMAIL, true);
 
         var authAppIdentifier = "14895398-33e5-41f0-b059-811b07df348d";
         var smsIdentifier = "e2d3f441-a17f-44a3-b608-b32c129b48b4";
@@ -201,8 +199,8 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
         var sms =
                 MFAMethod.smsMfaMethod(
                         true, true, PHONE_NUMBER, PriorityIdentifier.BACKUP, smsIdentifier);
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, authApp);
-        userStoreExtension.addMfaMethodSupportingMultiple(EMAIL, sms);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, authApp);
+        userStore.addMfaMethodSupportingMultiple(EMAIL, sms);
 
         var response =
                 makeRequest(
@@ -210,7 +208,7 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", testInternalSubject));
 
         assertEquals(200, response.getStatusCode());
         var expectedResponse =
@@ -242,16 +240,30 @@ class MfaMethodsRetrieveHandlerIntegrationTest extends ApiGatewayHandlerIntegrat
 
     @Test
     void shouldReturn404WhenUserDoesNotExist() {
-        var publicSubjectId = "userDoesNotExist";
+        var invalidPublicSubjectId = "userDoesNotExist";
+        var response =
+                makeRequest(
+                        Optional.empty(),
+                        Collections.emptyMap(),
+                        Collections.emptyMap(),
+                        Map.of("publicSubjectId", invalidPublicSubjectId),
+                        Map.of("principalId", testInternalSubject));
+
+        assertEquals(404, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
+    }
+
+    @Test
+    void shouldReturn401WhenPrincipalIsInvalid() {
         var response =
                 makeRequest(
                         Optional.empty(),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("publicSubjectId", publicSubjectId),
-                        Collections.emptyMap());
+                        Map.of("principalId", "invalid-principal"));
 
-        assertEquals(404, response.getStatusCode());
-        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1056));
+        assertEquals(401, response.getStatusCode());
+        assertThat(response, hasJsonBody(ErrorResponse.ERROR_1079));
     }
 }
